[package]
name = "fn_macro"
version = "0.1.0"
edition = "2024"
description = "Macro to implement all three Fn traits"
readme = "readme.md"
license = "MIT"
keywords = ["macros"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version = "2.0.104", features = ["extra-traits"]}
