[package]
name = "derive_fn"
version = "0.1.1"
edition = "2024"
description = "Macro to implement all three Fn traits"
readme = "readme.md"
license = "MIT"
keywords = ["macros"]
categories = ["rust-patterns"]
repository = "https://github.com/Pale-Vessel/fn_macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version = "2.0.104", features = ["extra-traits"]}
